--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@ a {
         <div v-show="tabValue === 'two'">
           <div class="aytext">
             <br> <br>
-            <p>Collectibles (wip)</p>
+            <p>收藏品 (自定义)</p>
             <el-input size="mini" v-model="input" style="width:70%; border-radius: 10px;" placeholder="15411"></el-input> <br> <br> <br>
             
-            <p>XP Spoofer (wip)</p>
+            <p>XP 欺骗 (自定义)</p>
             <el-input size="mini" v-model="input" style="width:70%; border-radius: 10px;" placeholder="5411"></el-input>
           </div>
         </div>
@@ -361,7 +361,7 @@ a {
             <p>菜单禁止我 - 确保通过存储库安装 H5GG 你可以得到它<a href="https://h5gg.app" target="_none"><u>这里</u></a>,不需要越狱绕过,因为H5GG是外部的.</p>
             <br>
             <p><b>调试</b></p>
-            <a href="/imgui"><button class="reloadbtn" role="button">重新加载</button></a>
+            <a href="/index"><button class="reloadbtn" role="button">重新加载</button></a>
             <br>
             <p><b>危险</b></p>
 					  <el-checkbox v-model="banaccountcheck" @change="banAccount()">禁止帐户</el-checkbox> <br> <br>
