--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ a {
             <p>菜单禁止我 - 确保通过存储库安装 H5GG 你可以得到它<a href="https://h5gg.app" target="_none"><u>这里</u></a>,不需要越狱绕过,因为H5GG是外部的.</p>
             <br>
             <p><b>调试</b></p>
-            <a href="/index"><button class="reloadbtn" role="button">重新加载</button></a>
+            <a href="/Jie.cn"><button class="reloadbtn" role="button">重新加载</button></a>
             <br>
             <p><b>危险</b></p>
 					  <el-checkbox v-model="banaccountcheck" @change="banAccount()">禁止帐户</el-checkbox> <br> <br>
