--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6/dist/vue.min.js"></script>
 	<script src="https://unpkg.com/element-ui@2.15.7/lib/index.js"></script>
-  <link rel="stylesheet" type="text/css" href="/static/imgui/imgui.css">
+  <link rel="stylesheet" type="text/css" href="static/imgui/imgui.css">
 	<script src="/static/imgui/imgui.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.7/lib/theme-chalk/index.css">
   <link rel="shortcut icon" type="image/x-icon" href="/static/assets/chika_doge.ico">
