--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
   <meta name="keywords" content="pixel gun 3d关于模组可能不会随时更新,因为我的时间不是很多,可以通过微信联系:Jie-Cia">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6/dist/vue.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="static/imgui/imgui.css">
+	<script src="https://github.com/CNJie1/Jie.cn/blob/173ae8e142e649b38c6f07d3bec334f388e4b20c/vue%E6%8A%80%E6%9C%AF/vue.js"></script>
 	<script src="https://unpkg.com/element-ui@2.15.7/lib/index.js"></script>
   <link rel="stylesheet" type="text/css" href="static/imgui/imgui.css">
 	<script src="/static/imgui/imgui.js"></script>
