--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="index/index.js"></script>
   <link rel="stylesheet" type="text/css" href="static/imgui/imgui.css">
 	<script src="/static/imgui/imgui.js"></script>
-	<link rel="stylesheet" href="index/index.css">
+	<link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.7/lib/theme-chalk/index.css">
   <link rel="shortcut icon" type="image/x-icon" href="/static/assets/chika_doge.ico">
 </header>
 
