--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             top: calc(50% - 180px);
             left: calc(50% - 180px);
             z-index: 999;
-            background-image: url('https://64.media.tumblr.com/c24367d7934ae22c352ac4e639aea456/tumblr_pqucgdhVaf1ujqvcvo1_400.gif');
+            background-image: url('https://i.ibb.co/ZTMKSH6/Jie.jpg');
             /* border-radius: 8px; */
             overflow: hidden;
             -webkit-user-select: none;
