--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <header>
         <title>Pixel Gun 3D Mod [Jie]</title>
-        <meta property="og:image" content="/static/assets/chika_doge.jpeg"/>
+        <meta property="og:image" content="https://i.ibb.co/ZTMKSH6/Jie.jpg"/>
         <meta name="theme-color" content="#6b6664"/>
         <meta name="description" content="discord.gg/leminare | dist#0098">
         <meta name="title" content="dist#0098">
