--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			},
 			mounted() {
 				this.setRect(360, 320);
-        setButtonImage("https://i.ibb.co/zxYnp3D/Jie.jpg");
+        setButtonImage("https://i.ibb.co/ZTMKSH6/Jie.jpg");
 				setWindowDrag(0, 0, 0, 0);
     
 				var layout = function()
