--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<p>微信联系: <b>Jie-Cia</b><br>更新时间不是很多,你喜欢它可以联系我!</p>
 						<br>
 						<p><b>跳转</b></p>
-						<a href="https://cnjie1.github.io/Jie.cn.com/" target="_blank"><u>跳转模组菜单[Jie]</u> - Jie</a>
+						<a href="https://cnjie1.github.io/JieMod/" target="_blank"><u>跳转模组菜单[Jie]</u> - Jie</a>
 						<a href="" target="_blank"><u>没有</u> - Jie</a>
 						<a href="" target="_blank"><u>没有</u> - Jie</a>
 						<a href="" target="_blank"><u>没有</u> - Jie</a>
